# judge-proxy

./: .gitignore  Dockerfile  docker-compose.yml  judge0.sample.conf  manage.py  pyproject.toml  sample.env
.github/workflows/: docker.yml
api/: urls.py
api/exapi/judge0/: models.py  service.py
api/serializers/: base.py
api/views/: judge.py  language.py  stubs.py
judge_proxy/: asgi.py  config.py  settings.py  urls.py  wsgi.py
stubs/: __init__.py
utils/: requests.py
